--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -1,10 +1,6 @@
 web:
-  # Note: "TAG" is special here. It will be replaced by the latest tag during deploy
-  # You do not have to pre-create this repo, the deploy script will do it for you
-  #
-  # Just make sure you're consistent with the app name here as what you pass as
-  # APP_NAME to convox_deploy.sh
-  image: 1234512345.dkr.ecr.us-east-1.amazonaws.com/your-app-name:TAG
+  # This points to an ECR repo on AWS. The repo will be created automatically.
+  image: 1234512345.dkr.ecr.us-east-1.amazonaws.com/your-app-name
   command: rackup -o 0.0.0.0
   environment:
     - RACK_ENV=production
